Korrektur erstes Probelesen

--- a/docu.tex
+++ b/docu.tex
@@ -16,7 +16,6 @@
 \clearpage
 \pagenumbering{arabic}
 
-\input{includes/abstract}
 \input{includes/motivation}
 \input{includes/gesamtsystem}
 \input{includes/sensor}
@@ -41,7 +40,7 @@
 
 \section{Papers}
 \label{sec:paper_ble}
-%\includepdf{extras/paper_jonas.pdf}
+\includepdf{extras/paper_jonas.pdf}
 
 
 \end{document}
