--- a/includes/anhang/raspi_config.tex
+++ b/includes/anhang/raspi_config.tex
@@ -2,7 +2,7 @@
 \label{sec:Einrichtung_Raspi}
 \subsection{Raspian}
 
-Als Betriebssystem wurde sich für das auf debian basierende Raspbian entschieden. Im folgenden wird kurz geschildert welche Schritte nötig sind um dies auf dem Raspberry Pi einzurichten.
+Als Betriebssystem wurde sich für das auf debian basierende Raspbian entschieden. Im folgenden wird kurz geschildert, welche Schritte nötig sind, um dies auf dem Raspberry Pi einzurichten.
 
 
 
@@ -68,5 +68,4 @@ Installiere falls noch nicht vorhanden:
   \item python3-pip
   \item TODO: alle abhängigkeiten für bluetooth hinzufügen
 \end{itemize}
-
 
