--- a/praeambel.tex
+++ b/praeambel.tex
@@ -1,6 +1,7 @@
-\usepackage[T1]{fontenc}        % Umlaute für PDF Darstellung
+%\usepackage[T1]{fontenc}        % Umlaute für PDF Darstellung
+\usepackage{fontspec}
 \usepackage[utf8]{inputenc}  % Umlaute von Tastatur einlesen (abhängig vom Betriebssystem!) kann auch auf ansinew oder z.B. utf8 umgestellt werden
-\usepackage[english,ngerman]{babel} % Trennregeln für Englisch und Deutsch
+\usepackage[ngerman,english]{babel} % Trennregeln für Englisch und Deutsch
 \usepackage{LTXKursTitel}       % Eigenes Titelblatt
 \usepackage{scrpage2, scrtime}  % Pakete für Seitenlayout und Uhrzeit
 \usepackage{setspace}           % Paket für Zeilenabstand
